[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "accxus"
version = "0.4.1"
description = "Account automation toolkit for social networks using SMS activation services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

keywords    = ["account", "automation", "sms", "activation", "social", "network", "telegram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

authors = [
    { name = "reekeer" },
]

maintainers = [ 
    { name = "xeltorV" },
]

dependencies = [
    "rigi-reekeer==1.3.3",
    "pyrogram==2.0.106",
    "TgCrypto",
    "aiohttp>=3.9",
    "pydantic>=2.5",
]

[project.optional-dependencies]
socks = ["aiohttp-socks>=0.8"]
dev   = [
    "ruff>=0.4",
    "black>=24",
    "pyright>=1.1",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
accxus = "accxus.ui.app:main"

[project.urls]
Repository = "https://github.com/reekeer/accxus"
Issues = "https://github.com/reekeer/accxus/issues"
Changelog = "https://github.com/reekeer/accxus/blob/main/CHANGELOG.md"

[tool.uv.build-backend]
module-name = "accxus"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ANN"]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "B008",
    "E501",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["accxus"]

[tool.ruff.lint.per-file-ignores]
"src/accxus/core/types.py" = ["F401", "F403"]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src/accxus"]
exclude = ["**/__pycache__", "**/*.pyi", "**/.venv", "**/venv"]
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
reportMissingModuleSource = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]